--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>hushlink - links concealed</title>
-    <meta
-      name="description"
-      content="Utility to keep secrets as encrypted QR codes"
-    />
+    <title>hushlink - conceal your prank links</title>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <link
       rel="shortcut icon"
